[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/UI/pause_menu/Background.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/pause_menu_btn.tres" type="Theme" id=3]
[ext_resource path="res://assets/audios/menu_select.MP3" type="AudioStream" id=4]
[ext_resource path="res://assets/audios/pause_btn.MP3" type="AudioStream" id=5]

[sub_resource type="InputEventAction" id=1]
action = "ui_pause"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_cancel"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "loading_out"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="pause_menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.984314, 0, 0.0823529 )

[node name="TextureRect" type="TextureRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Resume" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -15.0
margin_right = 60.0
margin_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 3 )
shortcut = SubResource( 2 )
text = "VOLTAR"
icon_align = 1

[node name="Quit" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 45.0
margin_right = 60.0
margin_bottom = 75.0
grow_horizontal = 2
theme = ExtResource( 3 )
shortcut = SubResource( 4 )
text = "SAIR"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/loading_out = SubResource( 5 )

[node name="audio_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="audio_btn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="focus_entered" from="Menu/Resume" to="." method="_on_Resume_focus_entered"]
[connection signal="pressed" from="Menu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="focus_entered" from="Menu/Quit" to="." method="_on_Quit_focus_entered"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
